# mist

./: .gitignore  CITATION.cff  LICENSE.md  README.md  environment.yml  requirements.txt  setup.cfg
analysis/: analyze_rankings.py
analysis/datasets/: chem_classify.py  compare_datasets.py  pred_classify.py  pull_examples.py  stats_spec_dataset.py
analysis/embedding/: embed_umap.py  tani_lineplot.py
analysis/forward/: 09_compare_pred_vs_real.py  collect_forward_model_res.py  forward_results_scrape.py  (+1 more)
fingerprints/: README.md
launcher_scripts/: generic_slurm.sh  hyperopt_slurm.sh  launch_tensorboard.sh  run_from_config.py
notebooks/: 01_contrastive_umap.ipynb  02_magma_plots.ipynb  03_forward_plots.ipynb  04_mills_analysis.ipynb  05_mills_CSI_mist_compare.ipynb  06_generate_spec_embeds.ipynb  07_train_val_compare.ipynb  dataset_analysis.ipynb  embed_csi_compare.ipynb  fp_canopus_compare.ipynb  fp_csi_compare.ipynb  magma_example.ipynb  mist_demo.ipynb  retrieval_canopus_compare.ipynb  retrieval_csi_compare.ipynb
quickstart/: 00_download_models.sh  01_reformat_mgf.py  01_run_models.sh  02_run_sirius.sh  03_summarize_sirius.py  04_create_lookup.py  05_run_models.sh  lookup_smiles.txt  quickstart.mgf  quickstart_labels.tsv
run_scripts/: embed_contrastive.py  embed_smis.py  hyperopt_binned_ffn.py  hyperopt_contrastive.py  hyperopt_forward_ffn.py  hyperopt_mist.py  hyperopt_xformer.py  pred_fp.py  predict_forward_ffn.py  retrieval_contrastive.py  retrieval_fp.py  train_contrastive.py  train_ffn_binned.py  train_forward_ffn.py  train_mist.py  train_xformer.py
(+255 files in other folders)
